# email-assistant

./: .gitignore  AZURE_DEPLOYMENT.md  Dockerfile  RAILWAY_DEPLOYMENT.md  app.py  nixpacks.toml  railway.json
openai_gateway/: Dockerfile  README.md  azure-deploy.yml  deploy_render.sh  docker-compose.yml  env.example  generate_jwt.py  pyproject.toml  requirements.txt  test_app.py  web.config
openai_gateway/.github/workflows/: ci.yml
openai_gateway/app/: logging.py  main.py  models.py  rate_limit.py  redaction.py  reidentify.py  settings.py
openai_gateway/tests/: test_api.py  test_redaction.py
